--- a/helm_deploy/values-dev.yaml
+++ b/helm_deploy/values-dev.yaml
@@ -40,6 +40,7 @@ env:
   DELIUS_API_URL: "https://community-api-secure.test.delius.probation.hmpps.dsd.io"
   DELIUS_API_PREFIX: "/secure"
   PROBATION_TEAMS_API_URL: "https://probation-teams-dev.prison.service.justice.gov.uk"
+  PRISONER_SEARCH_API_URL: "https://prisoner-search-dev.prison.service.justice.gov.uk"
   EXIT_LOCATION_URL: "https://digital-dev.prison.service.justice.gov.uk/"
   TOKENVERIFICATION_API_URL: https://token-verification-api-dev.prison.service.justice.gov.uk
   TOKENVERIFICATION_API_ENABLED: true
