--- a/helm_deploy/values-prod.yaml
+++ b/helm_deploy/values-prod.yaml
@@ -37,6 +37,7 @@ env:
   DELIUS_API_URL: "https://community-api-secure.probation.service.justice.gov.uk"
   DELIUS_API_PREFIX: "/secure"
   PROBATION_TEAMS_API_URL: "https://probation-teams.prison.service.justice.gov.uk"
+  PRISONER_SEARCH_API_URL: "https://prisoner-offender-search.prison.service.justice.gov.uk"
   EXIT_LOCATION_URL: "https://digital.prison.service.justice.gov.uk/"
   TOKENVERIFICATION_API_URL: https://token-verification-api.prison.service.justice.gov.uk
   TOKENVERIFICATION_API_ENABLED: true
