PI-1508 Migrate to the new Delius integration API
This is part of the move to deprecate Community API. The new API endpoints used in this PR are provided by the dedicated integration service for [HDC Licences and Delius](https://ministryofjustice.github.io/hmpps-probation-integration-services/tech-docs/projects/hdc-licences-and-delius/api-reference.html). The data returned by this API should be the same as before, but please reach out to us on Slack at [#probation-integration-tech](https://moj.enterprise.slack.com/archives/C02HQ4M2YQN) if you see any problems.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -128,7 +128,7 @@ jobs:
       ENABLE_TEST_UTILS: true
       NOMIS_API_URL: http://localhost:8080/prisonApi
       NOMIS_AUTH_URL: http://hmpps-auth:9090/auth
-      DELIUS_API_URL: http://localhost:8080/communityapi
+      DELIUS_API_URL: http://localhost:8080/delius
       PROBATION_TEAMS_API_URL: http://localhost:8080/probationteams
       TOKENVERIFICATION_API_ENABLED: false
       GOTENBERG_API_URL: http://localhost:3001
