--- a/docker-compose-full.yml
+++ b/docker-compose-full.yml
@@ -29,7 +29,7 @@ services:
       NOMIS_AUTH_EXTERNAL_URL: "http://localhost:9090/auth"
       TOKENVERIFICATION_API_URL: "http://token-verification-api:8080"
       NOMIS_API_URL: "http://stubs:3000/prisonApi"
-      DELIUS_API_URL: "http://stubs:3000/communityapi"
+      DELIUS_API_URL: "http://stubs:3000/delius"
       PROBATION_TEAMS_API_URL: "http://stubs:3000/probationteams"
       HDC_URL: "http://licences:3000"
       GOTENBERG_API_URL: "http://gotenberg:3000"
