--- a/feature.env
+++ b/feature.env
@@ -25,11 +25,10 @@ ADMIN_API_CLIENT_ID=licencesadmin
 ADMIN_API_CLIENT_SECRET=clientsecret
 
 # DELIUS API
-DELIUS_API_URL=http://localhost:8080/communityapi
+DELIUS_API_URL=http://localhost:8080/delius
 DELIUS_AUTH_URL=http://localhost:9090/auth
 DELIUS_API_CLIENT_ID=licencesadmin
 DELIUS_API_CLIENT_SECRET=clientsecret
-DELIUS_API_PREFIX=/api
 DELIUS_RO_ROLE_ID=LHDCBT002
 DELIUS_RO_VARY_ROLE_ID=LHDCBT003
 
