--- a/helm_deploy/values-prod.yaml
+++ b/helm_deploy/values-prod.yaml
@@ -34,8 +34,7 @@ env:
   SCHEDULED_JOBS_AUTOSTART: "yes"
   SCHEDULED_JOBS_OVERLAP: "5000"
   NOTIFY_ACTIVE_TEMPLATES: "CA_RETURN,CA_DECISION,RO_NEW,DM_NEW,DM_TO_CA_RETURN"
-  DELIUS_API_URL: "https://community-api-secure.probation.service.justice.gov.uk"
-  DELIUS_API_PREFIX: "/secure"
+  DELIUS_API_URL: "https://hdc-licences-and-delius.hmpps.service.justice.gov.uk"
   PROBATION_TEAMS_API_URL: "https://probation-teams.prison.service.justice.gov.uk"
   PRISONER_SEARCH_API_URL: "https://prisoner-search.prison.service.justice.gov.uk"
   EXIT_LOCATION_URL: "https://digital.prison.service.justice.gov.uk/"
