--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -157,6 +157,7 @@ jobs:
           key: gradle-cache-{{ checksum "licences-specs/build.gradle" }}
       - browser-tools/install-browser-tools:
           chrome-version: 116.0.5845.96
+          replace-existing-chrome: true
       - run:
           name: Run Integration Tests
           command: ./gradlew mockTest --info
