--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -156,7 +156,7 @@ jobs:
       - restore_cache:
           key: gradle-cache-{{ checksum "licences-specs/build.gradle" }}
       - browser-tools/install-browser-tools:
-          chrome-version: 116.0.5845.96
+          chrome-version: 114.0.5735.90 # TODO: remove when chromedriver downloads are fixed
       - run:
           name: Run Integration Tests
           command: ./gradlew mockTest --info
