--- a/package.json
+++ b/package.json
@@ -150,6 +150,7 @@
     "string-hash": "^1.1.3",
     "superagent": "^8.1.2",
     "swagger-ui-express": "^5.0.0",
+    "tar": "^6.2.1",
     "util": "^0.12.5",
     "uuid": "^9.0.1",
     "winston": "^3.13.0"
