--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2.1
 
 orbs:
   hmpps: ministryofjustice/hmpps@8
-  browser-tools: circleci/browser-tools@1.4.4
+  browser-tools: circleci/browser-tools@1.4.8
 
 parameters:
   alerts-slack-channel:
@@ -155,8 +155,7 @@ jobs:
           key: gradle-wrapper-{{ checksum "gradle/wrapper/gradle-wrapper.properties" }}
       - restore_cache:
           key: gradle-cache-{{ checksum "licences-specs/build.gradle" }}
-      - browser-tools/install-browser-tools:
-          chrome-version: 114.0.5735.90 # TODO: remove when chromedriver downloads are fixed
+      - browser-tools/install-browser-tools
       - run:
           name: Run Integration Tests
           command: ./gradlew mockTest --info
