--- a/helm_deploy/values-prod.yaml
+++ b/helm_deploy/values-prod.yaml
@@ -26,7 +26,7 @@ ingress:
     external-dns.alpha.kubernetes.io/set-identifier: licences-licences-prod-green
 
 env:
-  NOMIS_API_URL: "https://api.prison.service.justice.gov.uk"
+  NOMIS_API_URL: "https://prison-api.prison.service.justice.gov.uk"
   NOMIS_AUTH_URL: "https://sign-in.hmpps.service.justice.gov.uk/auth"
   GLOBAL_SEARCH_URL: "https://digital.prison.service.justice.gov.uk/global-search"
   PUSH_TO_NOMIS: "yes"
