--- a/feature.env
+++ b/feature.env
@@ -52,6 +52,9 @@ EXIT_LOCATION_URL=/
 GLOBAL_SEARCH_URL=http://localhost:3002/global-search
 FEEDBACK_SUPPORT_URL=https://support-dev.hmpps.service.justice.gov.uk/feedback-and-support
 
+# MANAGE USERS
+MANAGE_USERS_API_URL=http://localhost:8080/manageUsersApi
+
 LICENCE_RISK_MANAGEMENT_VERSION=3
 CURFEW_ADDRESS_REVIEW_VERSION=2
 LICENCE_POSTPONE_VERSION=2
