--- a/helm_deploy/values-prod.yaml
+++ b/helm_deploy/values-prod.yaml
@@ -61,7 +61,8 @@ allowlist:
   sodexo-northumberland2: "51.148.47.137/32"
   sodoxeo-forest-bank: "51.155.85.249/32"
   sodexo-peterborough: "51.155.55.241/32"
-  serco: "217.22.14.0/24"
+  serco-1: "217.22.14.151/32"
+  serco-2: "128.77.110.45/32"
   durham-tees-valley: "51.179.197.1/32"
   oakwood-01: "217.161.76.184/29"
   oakwood-02: "217.161.76.192/29"
