--- a/helm_deploy/values-preprod.yaml
+++ b/helm_deploy/values-preprod.yaml
@@ -103,6 +103,11 @@ allowlist:
   fivewells-4: "195.59.215.184/29"
   global-protect: "35.176.93.186/32"
   petty-france-wifi: "213.121.161.112/28"
+  vodafone-dia-1: "194.33.200.0/21"
+  vodafone-dia-2: "194.33.216.0/24"
+  vodafone-dia-3: "194.33.217.0/24"
+  vodafone-dia-4: "194.33.218.0/24"
+  palo-alto-prisma-corporate: "128.77.75.64/26"
 
 generic-prometheus-alerts:
   alertSeverity: cvl-alerts-non-prod
