--- a/helm_deploy/values-prod.yaml
+++ b/helm_deploy/values-prod.yaml
@@ -105,6 +105,11 @@ allowlist:
   petty-france-wifi: "213.121.161.112/28"
   azure-landing-zone-public-egress-1: "20.26.11.71/32"
   azure-landing-zone-public-egress-2: "20.26.11.108/32"
+  vodafone-dia-1: "194.33.200.0/21"
+  vodafone-dia-2: "194.33.216.0/24"
+  vodafone-dia-3: "194.33.217.0/24"
+  vodafone-dia-4: "194.33.218.0/24"
+  palo-alto-prisma-corporate: "128.77.75.64/26"
 
 # determine which slack channel alerts are sent to, via the correct Alert Manager receiver
 generic-prometheus-alerts:
