--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "npm": "^10"
   },
   "scripts": {
-    "postinstall": "husky install",
     "copy-views": "cp -R server/views/ dist/server/views/ && cp -R mock-server/routes/images dist/mock-server/routes",
     "watch-views": "nodemon --watch server/views -e pug -x npm run copy-views",
     "watch-ts": "tsc -w",
@@ -29,7 +28,8 @@
     "db:knex": "knex",
     "db:knex-migrate": "knex-migrate",
     "db:seed": "knex seed:run --env standard",
-    "security_audit": "npx audit-ci --config audit-ci.json"
+    "security_audit": "npx audit-ci --config audit-ci.json",
+    "prepare": "husky"
   },
   "lint-staged": {
     "*.{js,css}": [
@@ -106,21 +106,21 @@
     "@hapi/joi-date": "^2.0.1",
     "agentkeepalive": "^4.5.0",
     "applicationinsights": "^2.9.5",
-    "applicationinsights-native-metrics": "^0.0.10",
-    "body-parser": "^1.20.2",
+    "applicationinsights-native-metrics": "^0.0.11",
+    "body-parser": "^1.20.3",
     "case": "^1.6.3",
     "compression": "^1.7.4",
     "concat-stream": "^2.0.0",
     "config": "^3.3.12",
     "connect-flash": "^0.1.1",
     "connect-redis": "^7.1.1",
-    "cookie-parser": "^1.4.6",
+    "cookie-parser": "^1.4.7",
     "cookie-session": "^2.1.0",
     "csurf": "^1.11.0",
     "csv-writer": "^1.6.0",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "express-session": "1.18.0",
+    "express": "^4.21.1",
+    "express-session": "1.18.1",
     "govuk_frontend_toolkit": "^9.0.1",
     "govuk_template_jinja": "^0.26.0",
     "govuk-elements-sass": "^3.1.3",
@@ -135,24 +135,24 @@
     "moment-business-days": "^1.2.0",
     "nocache": "^4.0.0",
     "node-schedule": "^2.1.1",
-    "notifications-node-client": "^8.2.0",
+    "notifications-node-client": "^8.2.1",
     "passport": "^0.7.0",
     "passport-oauth2": "^1.8.0",
     "path": "^0.12.7",
-    "pg": "^8.12.0",
+    "pg": "^8.13.0",
     "pg-format": "^1.0.4",
     "poll-endpoint-for": "0.0.7",
     "pug": "3.0.3",
     "querystring": "^0.2.1",
     "ramda": "^0.30.1",
-    "redis": "^4.6.15",
+    "redis": "^4.7.0",
     "romannumerals": "^1.1.1",
     "string-hash": "^1.1.3",
-    "superagent": "^9.0.2",
+    "superagent": "^10.1.0",
     "swagger-ui-express": "^5.0.1",
     "util": "^0.12.5",
     "uuid": "^10.0.0",
-    "winston": "^3.13.1"
+    "winston": "^3.15.0"
   },
   "devDependencies": {
     "@types/connect-flash": "^0.0.40",
@@ -161,30 +161,35 @@
     "@types/passport": "^1.0.16",
     "@typescript-eslint/eslint-plugin": "^7.17.0",
     "audit-ci": "^7.1.0",
-    "concurrently": "^8.2.2",
+    "concurrently": "^9.0.1",
     "eslint": "^8.57.0",
     "eslint-config-airbnb-base": "15.0.0",
     "eslint-config-airbnb-typescript": "^18.0.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-import-resolver-typescript": "^3.6.1",
-    "eslint-plugin-import": "^2.29.1",
+    "eslint-import-resolver-typescript": "^3.6.3",
+    "eslint-plugin-import": "^2.30.0",
     "eslint-plugin-prettier": "^5.2.1",
-    "husky": "^9.1.2",
+    "husky": "^9.1.6",
     "jest": "^29.7.0",
     "jest-html-reporter": "^3.10.2",
     "jest-junit": "^16.0.0",
-    "lint-staged": "^15.2.7",
-    "nock": "^13.5.4",
+    "lint-staged": "^15.2.10",
+    "nock": "^13.5.5",
     "node-sass": "^9.0.0",
-    "nodemon": "^3.1.4",
+    "nodemon": "^3.1.7",
     "pdf-parse": "^1.1.1",
     "prettier": "^3.3.3",
     "supertest": "^7.0.0",
-    "ts-jest": "^29.2.3",
-    "typescript": "^5.5.4"
+    "ts-jest": "^29.2.5",
+    "typescript": "^5.6.3"
   },
   "bin": {
     "loadLicences": "./server/loadLicences.js",
     "saveLicences": "./server/saveLicences.js"
+  },
+  "overrides": {
+    "csurf": {
+      "cookie": "0.7.2"
+    }
   }
 }
