--- a/package.json
+++ b/package.json
@@ -116,7 +116,7 @@
     "connect-redis": "^7.1.1",
     "cookie-parser": "^1.4.7",
     "cookie-session": "^2.1.0",
-    "csurf": "^1.11.0",
+    "csrf-sync": "^4.0.3",
     "csv-writer": "^1.6.0",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
