--- a/feature.env
+++ b/feature.env
@@ -58,3 +58,4 @@ MANAGE_USERS_API_URL=http://localhost:8080/manageUsersApi
 LICENCE_RISK_MANAGEMENT_VERSION=3
 CURFEW_ADDRESS_REVIEW_VERSION=2
 LICENCE_POSTPONE_VERSION=2
+COM_NOT_ALLOCATED_BLOCK_ENABLED=false
