--- a/helm_deploy/values-dev.yaml
+++ b/helm_deploy/values-dev.yaml
@@ -48,6 +48,7 @@ env:
   LICENCE_RISK_MANAGEMENT_VERSION: '3'
   CURFEW_ADDRESS_REVIEW_VERSION: '2'
   LICENCE_POSTPONE_VERSION: '2'
+  COM_NOT_ALLOCATED_BLOCK_ENABLED: false
 
 generic-prometheus-alerts:
   alertSeverity: cvl-alerts-non-prod
