--- a/helm_deploy/values-prod.yaml
+++ b/helm_deploy/values-prod.yaml
@@ -45,6 +45,7 @@ env:
   LICENCE_RISK_MANAGEMENT_VERSION: '3'
   CURFEW_ADDRESS_REVIEW_VERSION: '2'
   LICENCE_POSTPONE_VERSION: '2'
+  COM_NOT_ALLOCATED_BLOCK_ENABLED: false
 
 allowlist:
   office: "217.33.148.210/32"
