Fixing trivy scan
The Github action looks in values.yml to find the image but this project is set up a bit weird

--- a/helm_deploy/licences/values.yaml
+++ b/helm_deploy/licences/values.yaml
@@ -1,4 +1,8 @@
 ---
+image:
+  repository: quay.io/hmpps/licences
+  tag: latest
+  port: 3000
 
 generic-prometheus-alerts:
   targetApplication: licences
