CVSL-2292 add call to probation search

--- a/helm_deploy/values-dev.yaml
+++ b/helm_deploy/values-dev.yaml
@@ -35,6 +35,7 @@ env:
   DELIUS_API_URL: "https://hdc-licences-and-delius-dev.hmpps.service.justice.gov.uk"
   PROBATION_TEAMS_API_URL: "https://probation-teams-dev.prison.service.justice.gov.uk"
   PRISONER_SEARCH_API_URL: "https://prisoner-search-dev.prison.service.justice.gov.uk"
+  PROBATION_SEARCH_API_URL: "https://probation-offender-search-dev.hmpps.service.justice.gov.uk"
   MANAGE_USERS_API_URL: "https://manage-users-api-dev.hmpps.service.justice.gov.uk"
   EXIT_LOCATION_URL: "https://digital-dev.prison.service.justice.gov.uk/"
   TOKENVERIFICATION_API_URL: https://token-verification-api-dev.prison.service.justice.gov.uk
