CVSL-2292 enable com unallocated block in preprod, map probation search api, return empty string in report when no pdu

--- a/helm_deploy/values-preprod.yaml
+++ b/helm_deploy/values-preprod.yaml
@@ -41,7 +41,7 @@ env:
   LICENCE_RISK_MANAGEMENT_VERSION: '3'
   CURFEW_ADDRESS_REVIEW_VERSION: '2'
   LICENCE_POSTPONE_VERSION: '2'
-  COM_NOT_ALLOCATED_BLOCK_ENABLED: false
+  COM_NOT_ALLOCATED_BLOCK_ENABLED: true
 
 allowlist:
   office: "217.33.148.210/32"
