--- a/helm_deploy/values-dev.yaml
+++ b/helm_deploy/values-dev.yaml
@@ -45,6 +45,7 @@ env:
   CURFEW_ADDRESS_REVIEW_VERSION: '2'
   LICENCE_POSTPONE_VERSION: '2'
   COM_NOT_ALLOCATED_BLOCK_ENABLED: true
+  CA_REPORTS_LINK_ENABLED: true
 
 generic-prometheus-alerts:
   alertSeverity: cvl-alerts-non-prod
