CVSL-2441 enable ca reports link in preprod

--- a/helm_deploy/values-preprod.yaml
+++ b/helm_deploy/values-preprod.yaml
@@ -42,7 +42,7 @@ env:
   CURFEW_ADDRESS_REVIEW_VERSION: '2'
   LICENCE_POSTPONE_VERSION: '2'
   COM_NOT_ALLOCATED_BLOCK_ENABLED: true
-  CA_REPORTS_LINK_ENABLED: false
+  CA_REPORTS_LINK_ENABLED: true
 
 allowlist:
   office: "217.33.148.210/32"
