CVSL-3090 update tests

--- a/feature.env
+++ b/feature.env
@@ -51,6 +51,7 @@ DOMAIN=http://localhost:3000
 EXIT_LOCATION_URL=/
 GLOBAL_SEARCH_URL=http://localhost:3002/global-search
 FEEDBACK_SUPPORT_URL=https://support-dev.hmpps.service.justice.gov.uk/feedback-and-support
+ELECTRONIC_MONITORING_ORDER_URL=https://hmpps-electronic-monitoring-create-an-order.hmpps.service.justice.gov.uk/
 
 # MANAGE USERS
 MANAGE_USERS_API_URL=http://localhost:8080/manageUsersApi
