CVSL-3251 Dependency bump

--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "lint": "eslint .",
     "typecheck": "tsc",
     "record-build-info": "node ./bin/record-build-info",
-    "css-build": "./bin/build-css",
     "clean": "rm -rf dist/* public/* .port.tmp *.log build/* uploads/* test-results.xml",
     "db:knex": "knex",
     "db:knex-migrate": "knex-migrate",
@@ -108,6 +107,7 @@
     "@hapi/joi-date": "^2.0.1",
     "agentkeepalive": "^4.6.0",
     "applicationinsights": "^2.9.8",
+    "applicationinsights-native-metrics": "^0.0.11",
     "body-parser": "^1.20.3",
     "case": "^1.6.3",
     "compression": "^1.8.1",
