--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -109,6 +109,7 @@ jobs:
           path: test-results/unit-test-reports.html
   integration_test:
     executor: integration-tests
+    resource_class: medium+
     environment:
       DB_SSL_ENABLED: false
       ENABLE_TEST_UTILS: true
