--- a/package.json
+++ b/package.json
@@ -8,13 +8,15 @@
     "npm": "^10"
   },
   "scripts": {
+    "compile-sass": "./bin/build-css -q --quiet-deps --no-source-map",
     "copy-views": "cp -R server/views/ dist/server/views/ && cp -R mock-server/routes/images dist/mock-server/routes",
+    "watch-sass": "npm run compile-sass -- --watch",
     "watch-views": "nodemon --watch server/views -e pug -x npm run copy-views",
     "watch-ts": "tsc -w",
     "watch-node": "DEBUG=gov-starter-server* nodemon --watch dist/ dist/server.js",
-    "build": "npm run clean && npm run css-build && tsc && npm run copy-views",
+    "build": "npm run clean && npm run compile-sass && tsc && npm run copy-views",
     "start": "node dist/server.js",
-    "start:dev": "npm run build && concurrently -k -p \"[{name}]\" -n \"Views,TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-views\" \"npm run watch-ts\" \"npm run watch-node\"",
+    "start:dev": "npm run build && concurrently -k -p \"[{name}]\" -n \"Views,TypeScript,Node,Sass\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-views\" \"npm run watch-ts\" \"npm run watch-node\" \"npm run watch-sass\"",
     "start:feature": "set -a; source feature.env; set +a && npm run build && npm start",
     "start-mocks": "node mock-server/start.js",
     "test:ci": "jest --runInBand --testPathPattern=/test/.*",
@@ -23,7 +25,6 @@
     "lint": "eslint .",
     "typecheck": "tsc",
     "record-build-info": "node ./bin/record-build-info",
-    "css-build": "./bin/build-css",
     "clean": "rm -rf dist/* public/* .port.tmp *.log build/* uploads/* test-results.xml",
     "db:knex": "knex",
     "db:knex-migrate": "knex-migrate",
@@ -106,8 +107,7 @@
   "dependencies": {
     "@hapi/joi-date": "^2.0.1",
     "agentkeepalive": "^4.6.0",
-    "applicationinsights": "^2.9.5",
-    "applicationinsights-native-metrics": "^0.0.11",
+    "applicationinsights": "^2.9.8",
     "body-parser": "^1.20.3",
     "case": "^1.6.3",
     "compression": "^1.8.1",
@@ -119,7 +119,7 @@
     "cookie-session": "^2.1.1",
     "csrf-sync": "^4.2.1",
     "csv-writer": "^1.6.0",
-    "dotenv": "^16.5.0",
+    "dotenv": "^16.6.1",
     "express": "^5.1.0",
     "express-session": "1.18.2",
     "govuk_frontend_toolkit": "^9.0.1",
@@ -146,7 +146,7 @@
     "pug": "3.0.3",
     "querystring": "^0.2.1",
     "ramda": "^0.30.1",
-    "redis": "^4.7.0",
+    "redis": "^4.7.1",
     "romannumerals": "^1.1.1",
     "string-hash": "^1.1.3",
     "superagent": "^10.2.3",
@@ -159,30 +159,30 @@
     "@ministryofjustice/hmpps-precommit-hooks": "^0.0.3",
     "@types/connect-flash": "^0.0.40",
     "@types/jest": "^30.0.0",
-    "@types/node": "^20.14.12",
+    "@types/node": "^20.19.11",
     "@types/passport": "^1.0.17",
-    "@typescript-eslint/eslint-plugin": "^7.17.0",
+    "@typescript-eslint/eslint-plugin": "^7.18.0",
     "audit-ci": "^7.1.0",
-    "concurrently": "^9.2.0",
-    "eslint": "^8.57.0",
+    "concurrently": "^9.2.1",
+    "eslint": "^8.57.1",
     "eslint-config-airbnb-base": "15.0.0",
     "eslint-config-airbnb-typescript": "^18.0.0",
     "eslint-config-prettier": "^10.1.8",
-    "eslint-import-resolver-typescript": "^3.8.3",
-    "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-prettier": "^5.4.1",
+    "eslint-import-resolver-typescript": "^3.10.1",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-prettier": "^5.5.4",
     "jest": "^29.7.0",
     "jest-html-reporter": "^4.3.0",
     "jest-junit": "^16.0.0",
-    "lint-staged": "^16.1.2",
-    "nock": "^14.0.7",
-    "node-sass": "^9.0.0",
+    "lint-staged": "^16.1.5",
+    "nock": "^14.0.10",
     "nodemon": "^3.1.10",
     "pdf-parse": "^1.1.1",
-    "prettier": "^3.5.3",
+    "prettier": "^3.6.2",
+    "sass": "^1.91.0",
     "supertest": "^7.1.4",
-    "ts-jest": "^29.4.0",
-    "typescript": "^5.8.3"
+    "ts-jest": "^29.4.1",
+    "typescript": "^5.9.2"
   },
   "bin": {
     "loadLicences": "./server/loadLicences.js",
