--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
     "start:dev": "npm run build && concurrently -k -p \"[{name}]\" -n \"Views,TypeScript,Node,Sass\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-views\" \"npm run watch-ts\" \"npm run watch-node\" \"npm run watch-sass\"",
     "start:feature": "set -a; source feature.env; set +a && npm run build && npm start",
     "start-mocks": "node mock-server/start.js",
-    "test:ci": "jest --runInBand --testPathPattern=/test/.*",
-    "test": "jest --testPathPattern=/test/.*",
-    "integration-test": "jest --runInBand --testPathPattern=/integration_test/.*",
+    "test:ci": "jest --runInBand --testPathPatterns=/test/.*",
+    "test": "jest --testPathPatterns=/test/.*",
+    "integration-test": "jest --runInBand --testPathPatterns=/integration_test/.*",
     "lint": "eslint .",
     "typecheck": "tsc",
     "record-build-info": "node ./bin/record-build-info",
@@ -34,7 +34,8 @@
     "precommit:secrets": "gitleaks git --pre-commit --redact --staged --verbose --config .gitleaks/config.toml",
     "precommit:lint": "node_modules/.bin/lint-staged",
     "precommit:verify": "npm run typecheck",
-    "generate:kotlin-types": "tsc && node dist/server/services/config/conditions/gen/generateKotlinTypes.js"
+    "generate:kotlin-types": "tsc && node dist/server/services/config/conditions/gen/generateKotlinTypes.js",
+    "setup": "npm ci && hmpps-npm-script-run-allowlist"
   },
   "lint-staged": {
     "*.{js,css}": [
@@ -106,27 +107,27 @@
   },
   "dependencies": {
     "@hapi/joi-date": "^2.0.1",
+    "@ministryofjustice/hmpps-npm-script-allowlist": "^0.0.1-alpha.3",
     "agentkeepalive": "^4.6.0",
     "applicationinsights": "^2.9.8",
-    "body-parser": "^1.20.3",
+    "body-parser": "^2.2.0",
     "case": "^1.6.3",
     "compression": "^1.8.1",
     "concat-stream": "^2.0.0",
-    "config": "^3.3.12",
     "connect-flash": "^0.1.1",
     "connect-redis": "^8.1.0",
     "cookie-parser": "^1.4.7",
     "cookie-session": "^2.1.1",
     "csrf-sync": "^4.2.1",
     "csv-writer": "^1.6.0",
-    "dotenv": "^16.6.1",
+    "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "express-session": "1.18.2",
     "govuk_frontend_toolkit": "^9.0.1",
     "govuk_template_jinja": "^0.26.0",
     "govuk-elements-sass": "^3.1.3",
     "helmet": "^8.1.0",
-    "joi": "^17.13.3",
+    "joi": "^18.0.1",
     "jquery": "^3.7.1",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
@@ -145,18 +146,18 @@
     "poll-endpoint-for": "0.0.7",
     "pug": "3.0.3",
     "querystring": "^0.2.1",
-    "ramda": "^0.30.1",
+    "ramda": "^0.31.3",
     "redis": "^4.7.1",
     "romannumerals": "^1.1.1",
     "string-hash": "^1.1.3",
     "superagent": "^10.2.3",
     "swagger-ui-express": "^5.0.1",
     "util": "^0.12.5",
-    "uuid": "^11.1.0",
+    "uuid": "^13.0.0",
     "winston": "^3.17.0"
   },
   "devDependencies": {
-    "@ministryofjustice/hmpps-precommit-hooks": "^0.0.3",
+    "@ministryofjustice/hmpps-precommit-hooks": "^0.0.4",
     "@types/connect-flash": "^0.0.40",
     "@types/jest": "^30.0.0",
     "@types/node": "^20.19.11",
@@ -171,17 +172,17 @@
     "eslint-import-resolver-typescript": "^3.10.1",
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-prettier": "^5.5.4",
-    "jest": "^29.7.0",
+    "jest": "^30.1.3",
     "jest-html-reporter": "^4.3.0",
     "jest-junit": "^16.0.0",
-    "lint-staged": "^16.1.5",
+    "lint-staged": "^16.2.0",
     "nock": "^14.0.10",
     "nodemon": "^3.1.10",
     "pdf-parse": "^1.1.1",
     "prettier": "^3.6.2",
-    "sass": "^1.91.0",
+    "sass": "^1.93.0",
     "supertest": "^7.1.4",
-    "ts-jest": "^29.4.1",
+    "ts-jest": "^29.4.4",
     "typescript": "^5.9.2"
   },
   "bin": {
