--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
       - POSTGRES_DB=licences
 
   licence-redis:
-    image: 'bitnami/redis:5.0'
+    image: 'redis:7.4'
     networks:
       - hmpps
     container_name: licence-redis
@@ -21,7 +21,12 @@ services:
       - ALLOW_EMPTY_PASSWORD=yes
     ports:
       - '6379:6379'
-
+    healthcheck:
+      test: [ "CMD-SHELL", "redis-cli ping | grep PONG" ]
+      interval: 5s
+      timeout: 3s
+      retries: 5
+  
   gotenberg:
     image: thecodingmachine/gotenberg:6.4.3
     networks:
