Fix integration tests and remove dotenv

--- a/package.json
+++ b/package.json
@@ -13,15 +13,15 @@
     "watch-sass": "npm run compile-sass -- --watch",
     "watch-views": "nodemon --watch server/views -e pug -x npm run copy-views",
     "watch-ts": "tsc -w",
-    "watch-node": "DEBUG=gov-starter-server* nodemon --watch dist/ dist/server.js",
+    "watch-node": "DEBUG=gov-starter-server* nodemon --watch dist/ --env-file=.env dist/server.js",
     "build": "npm run clean && npm run compile-sass && tsc && npm run copy-views",
     "start": "node dist/server.js",
     "start:dev": "npm run build && concurrently -k -p \"[{name}]\" -n \"Views,TypeScript,Node,Sass\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-views\" \"npm run watch-ts\" \"npm run watch-node\" \"npm run watch-sass\"",
-    "start:feature": "set -a; source feature.env; set +a && npm run build && npm start",
+    "start:feature": "npm run build && node --env-file=feature.env dist/server.js",
     "start-mocks": "node mock-server/start.js",
     "test:ci": "jest --runInBand --testPathPatterns=/test/.*",
     "test": "jest --testPathPatterns=/test/.*",
-    "integration-test": "jest --runInBand --testPathPatterns=/integration_test/.*",
+    "integration-test": "NODE_OPTIONS=\"$NODE_OPTIONS --experimental-vm-modules\" jest --runInBand --testPathPatterns=/integration_test/.*",
     "lint": "eslint .",
     "typecheck": "tsc",
     "record-build-info": "node ./bin/record-build-info",
@@ -120,7 +120,6 @@
     "cookie-session": "^2.1.1",
     "csrf-sync": "^4.2.1",
     "csv-writer": "^1.6.0",
-    "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "express-session": "1.18.2",
     "govuk_frontend_toolkit": "^9.0.1",
@@ -141,6 +140,7 @@
     "passport": "^0.7.0",
     "passport-oauth2": "^1.8.0",
     "path": "^0.12.7",
+    "pdf-parse": "2.4.5",
     "pg": "^8.16.3",
     "pg-format": "^1.0.4",
     "poll-endpoint-for": "0.0.7",
@@ -178,7 +178,6 @@
     "lint-staged": "^16.2.7",
     "nock": "^14.0.10",
     "nodemon": "^3.1.11",
-    "pdf-parse": "^2.4.5",
     "prettier": "^3.7.4",
     "sass": "^1.97.0",
     "supertest": "^7.1.4",
