--- a/package.json
+++ b/package.json
@@ -13,15 +13,15 @@
     "watch-sass": "npm run compile-sass -- --watch",
     "watch-views": "nodemon --watch server/views -e pug -x npm run copy-views",
     "watch-ts": "tsc -w",
-    "watch-node": "DEBUG=gov-starter-server* nodemon --watch dist/ dist/server.js",
+    "watch-node": "DEBUG=gov-starter-server* nodemon --watch dist/ --env-file=.env dist/server.js",
     "build": "npm run clean && npm run compile-sass && tsc && npm run copy-views",
     "start": "node dist/server.js",
     "start:dev": "npm run build && concurrently -k -p \"[{name}]\" -n \"Views,TypeScript,Node,Sass\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-views\" \"npm run watch-ts\" \"npm run watch-node\" \"npm run watch-sass\"",
-    "start:feature": "set -a; source feature.env; set +a && npm run build && npm start",
+    "start:feature": "npm run build && node --env-file=feature.env dist/server.js",
     "start-mocks": "node mock-server/start.js",
     "test:ci": "jest --runInBand --testPathPatterns=/test/.*",
     "test": "jest --testPathPatterns=/test/.*",
-    "integration-test": "jest --runInBand --testPathPatterns=/integration_test/.*",
+    "integration-test": "NODE_OPTIONS=\"$NODE_OPTIONS --experimental-vm-modules\" jest --runInBand --testPathPatterns=/integration_test/.*",
     "lint": "eslint .",
     "typecheck": "tsc",
     "record-build-info": "node ./bin/record-build-info",
@@ -107,29 +107,28 @@
   },
   "dependencies": {
     "@hapi/joi-date": "^2.0.1",
-    "@ministryofjustice/hmpps-npm-script-allowlist": "^0.0.1-alpha.3",
+    "@ministryofjustice/hmpps-npm-script-allowlist": "^0.0.3",
     "agentkeepalive": "^4.6.0",
     "applicationinsights": "^2.9.8",
-    "body-parser": "^2.2.0",
+    "body-parser": "^2.2.1",
     "case": "^1.6.3",
     "compression": "^1.8.1",
     "concat-stream": "^2.0.0",
     "connect-flash": "^0.1.1",
-    "connect-redis": "^8.1.0",
+    "connect-redis": "^9.0.0",
     "cookie-parser": "^1.4.7",
     "cookie-session": "^2.1.1",
     "csrf-sync": "^4.2.1",
     "csv-writer": "^1.6.0",
-    "dotenv": "^17.2.2",
-    "express": "^5.1.0",
+    "express": "^5.2.1",
     "express-session": "1.18.2",
     "govuk_frontend_toolkit": "^9.0.1",
     "govuk_template_jinja": "^0.26.0",
     "govuk-elements-sass": "^3.1.3",
     "helmet": "^8.1.0",
-    "joi": "^18.0.1",
+    "joi": "^18.0.2",
     "jquery": "^3.7.1",
-    "jsonwebtoken": "^9.0.2",
+    "jsonwebtoken": "^9.0.3",
     "jwt-decode": "^4.0.0",
     "knex": "^3.1.0",
     "knex-migrate": "^1.7.4",
@@ -146,18 +145,18 @@
     "poll-endpoint-for": "0.0.7",
     "pug": "3.0.3",
     "querystring": "^0.2.1",
-    "ramda": "^0.31.3",
-    "redis": "^4.7.1",
+    "ramda": "^0.32.0",
+    "redis": "^5.10.0",
     "romannumerals": "^1.1.1",
     "string-hash": "^1.1.3",
     "superagent": "^10.2.3",
     "swagger-ui-express": "^5.0.1",
     "util": "^0.12.5",
     "uuid": "^13.0.0",
-    "winston": "^3.17.0"
+    "winston": "^3.19.0"
   },
   "devDependencies": {
-    "@ministryofjustice/hmpps-precommit-hooks": "^0.0.4",
+    "@ministryofjustice/hmpps-precommit-hooks": "^1.0.2",
     "@types/connect-flash": "^0.0.40",
     "@types/jest": "^30.0.0",
     "@types/node": "^20.19.11",
@@ -172,18 +171,18 @@
     "eslint-import-resolver-typescript": "^3.10.1",
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-prettier": "^5.5.4",
-    "jest": "^30.1.3",
+    "jest": "^30.2.0",
     "jest-html-reporter": "^4.3.0",
     "jest-junit": "^16.0.0",
-    "lint-staged": "^16.2.0",
+    "lint-staged": "^16.2.7",
     "nock": "^14.0.10",
-    "nodemon": "^3.1.10",
-    "pdf-parse": "^1.1.1",
-    "prettier": "^3.6.2",
-    "sass": "^1.93.0",
+    "nodemon": "^3.1.11",
+    "pdf-parse": "2.4.5",
+    "prettier": "^3.7.4",
+    "sass": "^1.97.0",
     "supertest": "^7.1.4",
-    "ts-jest": "^29.4.4",
-    "typescript": "^5.9.2"
+    "ts-jest": "^29.4.6",
+    "typescript": "^5.9.3"
   },
   "bin": {
     "loadLicences": "./server/loadLicences.js",
