CVSL-3810 HDC | Add a conditions testing app

--- a/feature.env
+++ b/feature.env
@@ -32,6 +32,14 @@ DELIUS_API_CLIENT_SECRET=clientsecret
 DELIUS_RO_ROLE_ID=LHDCBT002
 DELIUS_RO_VARY_ROLE_ID=LHDCBT003
 
+# HDC API
+HDC_API_URL=http://localhost:8089
+HDC_AUTH_URL=http://localhost:9090/auth
+# kubectl -n licences-dev get secrets licences -o json  | jq -r '.data.ADMIN_API_CLIENT_ID | @base64d'
+HDC_API_CLIENT_ID=<need_to_add_id>
+# kubectl -n licences-dev get secrets licences -o json  | jq -r '.data.ADMIN_API_CLIENT_SECRET | @base64d'
+HDC_API_CLIENT_SECRET=<need_to_add_secret>
+
 # PROBATION TEAMS
 PROBATION_TEAMS_API_URL=http://localhost:8080/probationteams
 PROBATION_TEAMS_AUTH_URL=http://localhost:9090/auth
