--- a/package.json
+++ b/package.json
@@ -31,9 +31,6 @@
     "db:seed": "knex seed:run --env standard",
     "security_audit": "npx audit-ci --config audit-ci.json",
     "prepare": "hmpps-precommit-hooks-prepare",
-    "precommit:secrets": "gitleaks git --pre-commit --redact --staged --verbose --config .gitleaks/config.toml",
-    "precommit:lint": "node_modules/.bin/lint-staged",
-    "precommit:verify": "npm run typecheck",
     "generate:kotlin-types": "tsc && node dist/server/services/config/conditions/gen/generateKotlinTypes.js",
     "setup": "npm ci && hmpps-npm-script-run-allowlist"
   },
@@ -136,17 +133,17 @@
     "moment-business-days": "^1.2.0",
     "nocache": "^4.0.0",
     "node-schedule": "^2.1.1",
-    "notifications-node-client": "^8.2.1",
+    "notifications-node-client": "^8.3.0",
     "passport": "^0.7.0",
     "passport-oauth2": "^1.8.0",
     "path": "^0.12.7",
-    "pg": "^8.18.0",
+    "pg": "^8.19.0",
     "pg-format": "^1.0.4",
     "poll-endpoint-for": "0.0.7",
     "pug": "3.0.3",
     "querystring": "^0.2.1",
     "ramda": "^0.32.0",
-    "redis": "^5.10.0",
+    "redis": "^5.11.0",
     "romannumerals": "^1.1.1",
     "string-hash": "^1.1.3",
     "superagent": "^10.3.0",
@@ -156,7 +153,7 @@
     "winston": "^3.19.0"
   },
   "devDependencies": {
-    "@ministryofjustice/hmpps-precommit-hooks": "^1.0.2",
+    "@ministryofjustice/hmpps-precommit-hooks": "^2.0.2",
     "@types/connect-flash": "^0.0.40",
     "@types/jest": "^30.0.0",
     "@types/node": "^20.19.11",
@@ -174,16 +171,16 @@
     "jest": "^30.2.0",
     "jest-html-reporter": "^4.3.0",
     "jest-junit": "^16.0.0",
-    "lint-staged": "^16.2.7",
-    "nock": "^14.0.10",
-    "nodemon": "^3.1.11",
+    "lint-staged": "^16.3.1",
+    "nock": "^14.0.11",
+    "nodemon": "^3.1.14",
+    "openapi-typescript": "^7.13.0",
     "pdf-parse": "2.4.5",
     "prettier": "^3.8.1",
     "sass": "^1.97.3",
     "supertest": "^7.2.2",
     "ts-jest": "^29.4.6",
-    "typescript": "^5.9.3",
-    "openapi-typescript": "^7.10.1"
+    "typescript": "^5.9.3"
   },
   "bin": {
     "loadLicences": "./server/loadLicences.js",
