--- a/package.json
+++ b/package.json
@@ -172,7 +172,7 @@
     "jest-html-reporter": "^4.3.0",
     "jest-junit": "^16.0.0",
     "lint-staged": "^16.3.1",
-    "nock": "^14.0.11",
+    "nock": "14.0.10",
     "nodemon": "^3.1.14",
     "openapi-typescript": "^7.13.0",
     "pdf-parse": "2.4.5",
